@@ -1,3 +1,6 @@
+- rpmdrake
+  o fix encoding of diff output (#52994)
+
 Version 5.18 - 1 October 2009, Thierry Vignaud
 
 - edit-urpm-sources:
